[package]
name = "switchboard-solana"
documentation = "https://switchboard-solana-rust-docs.web.app"
version = "0.30.4"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with Switchboard accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_solana"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
pid_override = []

[dependencies.anchor-lang]
git = "https://github.com/coral-xyz/anchor"
rev = "b26f7eb4855af19d0792c3c221d0650e75d929bc"
[dependencies.solana-program]
version = "2"
[dependencies.bytemuck]
version = "1"
[dependencies.rust_decimal]
version = "1.36"
[dependencies.superslice]
version = "1"
[dependencies.lazy_static]
version = "1.5.0"
